--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-dompdf": "^0.9.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.6",
         "jeroennoten/laravel-adminlte": "^3.6",
         "laravel/framework": "^8.54",
         "laravel/jetstream": "^2.3",
