--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.3.1",
         "@tailwindcss/typography": "^0.4.0",
+        "@vue/compiler-sfc": "^3.2.12",
         "alpinejs": "^3.0.6",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.1",
-        "tailwindcss": "^2.2.2"
+        "tailwindcss": "^2.2.2",
+        "vue": "^3.2.12",
+        "vue-loader": "^16.5.0"
     }
 }
