--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "tailwindcss": "^2.2.2",
         "vue": "^3.2.12",
         "vue-loader": "^16.5.0"
+    },
+    "dependencies": {
+        "vue-router": "^4.0.11"
     }
 }
