--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,4 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+TOKEN_APIS_PERU=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6IjEzaGVyZW5jaWFzQGdtYWlsLmNvbSJ9.Uo6LK4pYSpDdY1zLKKYc6zwzuyFk_hemBf_L8xujJvs
