--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "chart.js": "^3.6.0",
         "vue-chart-3": "^0.5.11",
+        "vue-image-crop-upload": "^3.0.3",
         "vue-router": "^4.0.11"
     }
 }
