--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "chart.js": "^3.6.0",
         "vue-chart-3": "^0.5.11",
         "vue-image-crop-upload": "^3.0.3",
+        "vue-loading-overlay": "4.0",
         "vue-router": "^4.0.11",
         "vue-select": "^4.0.0-beta.1"
     }
