--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "vue-image-crop-upload": "^3.0.3",
         "vue-loading-overlay": "4.0",
         "vue-router": "^4.0.11",
-        "vue-select": "^4.0.0-beta.1"
+        "vue-select": "^4.0.0-beta.1",
+        "vue3-popper": "^1.4.1"
     }
 }
