--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
-version: '3'
+version: '3.8'
 networks:
-    laravel:
+    computo:
+      driver: bridge
 
 services:
     nginx:
         image: nginx:stable-alpine
         container_name: nginx
         ports:
-            - "8080:80"
+            - "8007:80"
         volumes:
             - .:/var/www/html
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
@@ -15,36 +16,38 @@ services:
             - php
             - mysql
         networks:
-            - laravel
+            - computo
 
     mysql:
         image: mysql:5.7.22
         container_name: mysql
         restart: unless-stopped
+        volumes:
+            - ./db:/var/lib/mysql
         tty: true
         ports:
-            - "3306:3306"
+            - "3307:3306"
         environment:
-            MYSQL_DATABASE: homestead
-            MYSQL_USER: homestead
+            MYSQL_DATABASE: computo
+            MYSQL_USER: computo
             MYSQL_PASSWORD: secret
             MYSQL_ROOT_PASSWORD: secret
             SERVICE_TAGS: dev
             SERVICE_NAME: mysql
         networks:
-            - laravel
+            - computo
 
     php:
         build:
             context: .
-            dockerfile: Dockerfile
+            dockerfile: Dockerfile.windows
         container_name: php
         volumes:
             - .:/var/www/html
         ports:
-            - "9000:9000"
+            - "9007:9000"
         networks:
-            - laravel
+            - computo
 
     npm:
         image: node:latest
@@ -54,16 +57,14 @@ services:
         working_dir: /var/www/html
         entrypoint: ['npm']
 
-    artisan:
-        build:
-            context: .
-            dockerfile: Dockerfile
-        container_name: artisan
-        volumes:
-            - .:/var/www/html
-        depends_on:
-            - mysql
-        working_dir: /var/www/html
-        entrypoint: ['php', '/var/www/html/artisan']
-        networks:
-            - laravel
+    phpmyadmin:
+      image: phpmyadmin
+      restart: always
+      ports:
+        - 8087:80
+      environment:
+        - PMA_ARBITRARY=1
+        - PMA_HOST=mysql
+        - PMA_PORT=3306
+      networks:
+        - computo
