--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,10 @@
 server {
     listen 80;
-    index index.php index.html;
-    server_name localhost;
+    server_name computo.test;
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/html/public;
+    index index.php index.html;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
